<resources>
    <string name="app_name">Altimeter</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="unknown_value">\?</string>
    <string name="calibrate_button">Set Ground Level</string>
    <string name="pressure_altitude_label">Pressure Altitude</string>
    <string name="pressure_label">Pressure</string>
    <string name="gps_altitude_label">GPS Altitude</string>
</resources>
