<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              android:gravity="center_horizontal"
              android:layout_marginTop="20dp"
              tools:context="me.chrislane.altimeter.fragment.AltitudeFragment">

    <Button
            android:id="@+id/calibrate_button"
            android:text="@string/calibrate_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="center"/>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:gravity="center_horizontal"
            android:weightSum="5">

        <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="1">

            <TextView
                    android:text="@string/pressure_altitude_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/pressure_altitude_label"
                    android:layout_gravity="center"
                    android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                    android:textAlignment="center"/>

            <TextView
                    android:text="@string/unknown_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/pressure_altitude"
                    android:layout_gravity="center"
                    android:layout_marginTop="20dp"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    android:textAlignment="center"/>

            <TextView
                    android:text="@string/pressure_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/pressure_label"
                    android:layout_gravity="center"
                    android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                    android:textAlignment="center"
                    android:layout_marginTop="50dp"/>

            <TextView
                    android:text="@string/unknown_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/pressure"
                    android:layout_gravity="center"
                    android:layout_marginTop="20dp"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    android:textAlignment="center"/>

        </LinearLayout>

        <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"/>

        <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="1">

            <TextView
                    android:text="@string/gps_altitude_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/gps_altitude_label"
                    android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                    android:textAlignment="center"
                    android:layout_gravity="center"/>

            <TextView
                    android:text="@string/unknown_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/gps_altitude"
                    android:layout_gravity="center"
                    android:layout_marginTop="20dp"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    android:textAlignment="center"/>

        </LinearLayout>

    </LinearLayout>


</LinearLayout>
